# advent_of_code

./: .gitignore  .neoconf.json  README.md  pyproject.toml
2018/: 1.py  2.py  4.py  5.py
2020/: 1.py  2.py  3.py  4.py  test_10.py  test_5.py  test_6.py  test_7.py  test_8.py  test_9.py
2020/day_11/: part_1.txt  part_two.txt  test_11.py
2020/day_12/: part_one.txt  part_two.txt  test_12.py
2020/day_13/: part_one.txt  part_two.txt  test_13.py
2020/day_14/: part_one.txt  part_two.txt  test_14.py
2020/day_15/: part_one.txt  part_two.txt  test_15.py
2020/day_16/: input.txt  part_two.txt  test_16.py
2020/day_17/: part_one.txt  part_two.txt  test_17.py
2020/day_18/: part_two.txt  test_18.py
2020/day_19/: part_two.txt  test_19.py
2020/day_20/: part_one.txt
2020/day_21/: input.txt  part_one.txt  test_21.py
2020/day_22/: part_one.txt  part_two.txt  test_22.py
2020/day_23/: part_one.txt  part_two.txt  test_23.py
2020/day_24/: part_two.txt  test_24.py
2020/day_25/: test_25.py
2020/inputs/: 5
2020/tests/: test_4.py
2021/01/: aoc202101.py  test_aoc202101.py
2021/02/: aoc202102.py  test_aoc202102.py
2021/03/: aoc202103.py  test_aoc202103.py
2021/04/: aoc202104.py  test_aoc202104.py
2021/05/: aoc202105.py  test_aoc202105.py
2021/06/: aoc202106.py  test_aoc202106.py
2021/07/: aoc202107.py  test_aoc202107.py
2021/08/: aoc202108.py  test_aoc202108.py
2021/09/: aoc202109.py  test_aoc202109.py
2021/1/: 1.py
2021/10/: aoc202110.py  test_aoc202110.py
2021/11/: aoc202111.py  test_aoc202111.py
2021/12/: aoc202112.py  test_aoc202112.py
(+124 files in other folders)
